# pychete

./: .gitignore  AGENT.md  AGENTS.md  README.md  listener.py  pyproject.toml
assets/models/: E_VLL.m  S1S3LQs.m  SM.m  Singlet_Scalar_Extension.m  VLF_toy_model.m  VLF_toy_model.py
assets/validation/matchete/: default_matching_targets.json
assets/validation/pychete/: E_VLL.matching_fixture.json  E_VLL.model_fixture.json  S1S3LQs.model_fixture.json  SM.model_fixture.json  Singlet_Scalar_Extension.matching_fixture.json  Singlet_Scalar_Extension.model_fixture.json  VLF_toy_model.matching_fixture.json  (+1 more)
benchmarks/: dirac_trace.py
dependencies/: install_dependencies.py
examples/: lagrangian_printout.py  scalar_theory_playground.ipynb
helper_mathematica_scripts/: README.md  convert_matchete_model_state.py  convert_matchete_previous_results.py  debug_singlet_eom_simplify.wls  debug_singlet_wilson_trace.wls  export_matchete_matching_snapshots.wls  export_matchete_model_state.wls
implementation_notes/: dependencies_implementation.md  dependencies_user.md  first_shot_implementation.md  first_shot_user.md  first_trace_implementation.md  first_trace_user.md  one_shot_implementation.md  one_shot_implementation_B.md  one_shot_implementation_part_A.md  one_shot_implementation_part_B.md  one_shot_implementation_part_C.md  one_shot_implementation_part_F.md  one_shot_implementation_part_I.md  one_shot_user.md
mathematica/: theory_loader.m
scripts/: README.md  compare_singlet_wilson_debug.py  convert_matchete_model_state.py  convert_matchete_model_state.wls  convert_matchete_previous_results.py  debug_pychete_singlet_eom_boundary.py  debug_pychete_singlet_wilson_trace.py  export_matchete_matching_snapshots.wls  export_matchete_model_state.wls  run_with_memory_watch.py
src/: pychete.py
src/pychete/: __init__.py  __main__.py  api.py  cde.py  dimensions.py  effective_couplings.py  eft.py  expr.py  functional.py  green_basis.py  indices.py  linear_external.py  logging.py  loop_integration.py  matching.py  matching_expansion_plans.py  matching_field_dofs.py  matching_integrals.py  matching_options.py  matching_projection_filters.py  matching_results.py  noncommutative.py  one_loop.py  operator_bases.py  printing.py  serialization.py  smeft.py  spinor.py  state.py  supertraces.py  symbols.py  theory.py  theory_metadata.py  tree_matching.py  validation.py  validation_fixtures.py  wilson_line_eom.py  wilson_lines.py
tests/: conftest.py  test_static_typing.py  test_symbolica_local_versions.py
(+77 files in other folders)
