[project]
name = "pychete"
version = "0.0.1"
description = "Symbolica-first Python port foundation for Matchete-style EFT matching."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src/pychete"]
show_error_codes = true
pretty = true
warn_unused_ignores = true
