[project]
name = "pychete"
version = "0.0.1"
description = "Symbolica-first Python port foundation for Matchete-style EFT matching."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "backend: backend adapter and analytic backend tests",
    "matching: one-loop matching and fluctuation-operator integration tests",
    "validation: committed fixture and gap-report validation tests",
    "slow: tests that are intentionally slower and should be batched before full-suite gates",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src/pychete"]
show_error_codes = true
pretty = true
warn_unused_ignores = true
