[project]
name = "pychete"
version = "0.0.1"
description = "Symbolica-first Python port foundation for Matchete-style EFT matching."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "backend: backend adapter and analytic backend tests",
    "definitions: core symbol, theory, state, printing, and public API tests",
    "dependencies: dependency installer and local dependency import tests",
    "eft: EFT counting and truncation tests",
    "functional: functional derivative, covariant derivative, and EOM tests",
    "integration: integration tests grouped by feature area",
    "loaders: Python, Mathematica-subset, and fixture conversion loader tests",
    "matching: one-loop matching and fluctuation-operator integration tests",
    "models: model asset and model fixture loading tests",
    "validation: committed fixture and gap-report validation tests",
    "slow: tests that are intentionally slower and should be batched before full-suite gates",
    "typing: static typing and mypy gate tests",
    "unit: focused unit tests grouped by feature area",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src/pychete"]
show_error_codes = true
pretty = true
warn_unused_ignores = true
